Updated APIs
