# openapi/pelican.yaml
@@ -1,7 +1,7 @@
 openapi: "3.1.0"
 info:
   title: pelican
-  version: "0.13.0"
+  version: "0.14.0"
 paths:
   /bindings:
     get:
@@ -198,6 +198,31 @@ paths:
                 examples:
                   - status_code: 400
                     detail: Bad Request
+                    extra: {}
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                properties:
+                  status_code:
+                    type: integer
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type:
+                      - "null"
+                      - object
+                      - array
+                type: object
+                required:
+                  - detail
+                  - status_code
+                description: Conflict Exception
+                examples:
+                  - status_code: 409
+                    detail: Conflict
                     extra: {}
       deprecated: false
   /bindings/{id}:
@@ -454,6 +479,31 @@ paths:
                   - status_code: 404
                     detail: Not Found
                     extra: {}
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                properties:
+                  status_code:
+                    type: integer
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type:
+                      - "null"
+                      - object
+                      - array
+                type: object
+                required:
+                  - detail
+                  - status_code
+                description: Conflict Exception
+                examples:
+                  - status_code: 409
+                    detail: Conflict
+                    extra: {}
       deprecated: false
   /media:
     get:
@@ -650,6 +700,31 @@ paths:
                 examples:
                   - status_code: 400
                     detail: Bad Request
+                    extra: {}
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                properties:
+                  status_code:
+                    type: integer
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type:
+                      - "null"
+                      - object
+                      - array
+                type: object
+                required:
+                  - detail
+                  - status_code
+                description: Conflict Exception
+                examples:
+                  - status_code: 409
+                    detail: Conflict
                     extra: {}
       deprecated: false
   /media/{id}:
@@ -905,6 +980,31 @@ paths:
                 examples:
                   - status_code: 404
                     detail: Not Found
+                    extra: {}
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                properties:
+                  status_code:
+                    type: integer
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type:
+                      - "null"
+                      - object
+                      - array
+                type: object
+                required:
+                  - detail
+                  - status_code
+                description: Conflict Exception
+                examples:
+                  - status_code: 409
+                    detail: Conflict
                     extra: {}
       deprecated: false
   /media/{id}/content:
@@ -1391,6 +1491,31 @@ paths:
                   - status_code: 400
                     detail: Bad Request
                     extra: {}
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                properties:
+                  status_code:
+                    type: integer
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type:
+                      - "null"
+                      - object
+                      - array
+                type: object
+                required:
+                  - detail
+                  - status_code
+                description: Conflict Exception
+                examples:
+                  - status_code: 409
+                    detail: Conflict
+                    extra: {}
       deprecated: false
   /playlists/{id}:
     get:
@@ -1645,6 +1770,31 @@ paths:
                 examples:
                   - status_code: 404
                     detail: Not Found
+                    extra: {}
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                properties:
+                  status_code:
+                    type: integer
+                  detail:
+                    type: string
+                  extra:
+                    additionalProperties: {}
+                    type:
+                      - "null"
+                      - object
+                      - array
+                type: object
+                required:
+                  - detail
+                  - status_code
+                description: Conflict Exception
+                examples:
+                  - status_code: 409
+                    detail: Conflict
                     extra: {}
       deprecated: false
   /playlists/{id}/m3u:
@@ -1964,15 +2114,6 @@ components:
       type: string
       enum:
         - test
-        - binding-created
-        - binding-updated
-        - binding-deleted
-        - media-created
-        - media-updated
-        - media-deleted
-        - playlist-created
-        - playlist-updated
-        - playlist-deleted
       title: EventType
       description: Event types.
     GetResponseBinding:
@@ -1986,12 +2127,12 @@ components:
           type: string
           format: uuid
           title: Playlistid
-          description: Identifier of the playlist that the binding belongs to.
+          description: Identifier of the playlist the binding belongs to.
         mediaId:
           type: string
           format: uuid
           title: Mediaid
-          description: Identifier of the media that the binding belongs to.
+          description: Identifier of the media the binding belongs to.
         rank:
           type: string
           title: Rank
@@ -2000,12 +2141,12 @@ components:
           anyOf:
             - $ref: "#/components/schemas/bindings_models_Playlist"
             - type: "null"
-          description: Playlist that the binding belongs to.
+          description: Playlist the binding belongs to.
         media:
           anyOf:
             - $ref: "#/components/schemas/bindings_models_Media"
             - type: "null"
-          description: Media that the binding belongs to.
+          description: Media the binding belongs to.
       type: object
       required:
         - id
@@ -2034,7 +2175,7 @@ components:
               type: array
             - type: "null"
           title: Bindings
-          description: Bindings that the media belongs to.
+          description: Bindings the media belongs to.
       type: object
       required:
         - id
@@ -2060,7 +2201,7 @@ components:
               type: array
             - type: "null"
           title: Bindings
-          description: Bindings that the playlist belongs to.
+          description: Bindings the playlist belongs to.
       type: object
       required:
         - id
@@ -2215,12 +2356,12 @@ components:
           type: string
           format: uuid
           title: Playlistid
-          description: Identifier of the playlist that the binding belongs to.
+          description: Identifier of the playlist the binding belongs to.
         mediaId:
           type: string
           format: uuid
           title: Mediaid
-          description: Identifier of the media that the binding belongs to.
+          description: Identifier of the media the binding belongs to.
         rank:
           type: string
           title: Rank
@@ -2229,12 +2370,12 @@ components:
           anyOf:
             - $ref: "#/components/schemas/bindings_models_Playlist"
             - type: "null"
-          description: Playlist that the binding belongs to.
+          description: Playlist the binding belongs to.
         media:
           anyOf:
             - $ref: "#/components/schemas/bindings_models_Media"
             - type: "null"
-          description: Media that the binding belongs to.
+          description: Media the binding belongs to.
       type: object
       required:
         - id
@@ -2517,7 +2658,7 @@ components:
               type: array
             - type: "null"
           title: Bindings
-          description: Bindings that the media belongs to.
+          description: Bindings the media belongs to.
       type: object
       required:
         - id
@@ -2600,7 +2741,7 @@ components:
               type: array
             - type: "null"
           title: Bindings
-          description: Bindings that the playlist belongs to.
+          description: Bindings the playlist belongs to.
       type: object
       required:
         - id
@@ -2859,12 +3000,12 @@ components:
           type: string
           format: uuid
           title: Playlistid
-          description: Identifier of the playlist that the binding belongs to.
+          description: Identifier of the playlist the binding belongs to.
         mediaId:
           type: string
           format: uuid
           title: Mediaid
-          description: Identifier of the media that the binding belongs to.
+          description: Identifier of the media the binding belongs to.
         rank:
           type: string
           title: Rank
@@ -2873,12 +3014,12 @@ components:
           anyOf:
             - $ref: "#/components/schemas/media_models_Playlist"
             - type: "null"
-          description: Playlist that the binding belongs to.
+          description: Playlist the binding belongs to.
         media:
           anyOf:
             - $ref: "#/components/schemas/media_models_Media"
             - type: "null"
-          description: Media that the binding belongs to.
+          description: Media the binding belongs to.
       type: object
       required:
         - id
@@ -3151,7 +3292,7 @@ components:
               type: array
             - type: "null"
           title: Bindings
-          description: Bindings that the media belongs to.
+          description: Bindings the media belongs to.
       type: object
       required:
         - id
@@ -3234,7 +3375,7 @@ components:
               type: array
             - type: "null"
           title: Bindings
-          description: Bindings that the playlist belongs to.
+          description: Bindings the playlist belongs to.
       type: object
       required:
         - id
@@ -3493,12 +3634,12 @@ components:
           type: string
           format: uuid
           title: Playlistid
-          description: Identifier of the playlist that the binding belongs to.
+          description: Identifier of the playlist the binding belongs to.
         mediaId:
           type: string
           format: uuid
           title: Mediaid
-          description: Identifier of the media that the binding belongs to.
+          description: Identifier of the media the binding belongs to.
         rank:
           type: string
           title: Rank
@@ -3507,12 +3648,12 @@ components:
           anyOf:
             - $ref: "#/components/schemas/playlists_models_Playlist"
             - type: "null"
-          description: Playlist that the binding belongs to.
+          description: Playlist the binding belongs to.
         media:
           anyOf:
             - $ref: "#/components/schemas/playlists_models_Media"
             - type: "null"
-          description: Media that the binding belongs to.
+          description: Media the binding belongs to.
       type: object
       required:
         - id
@@ -3785,7 +3926,7 @@ components:
               type: array
             - type: "null"
           title: Bindings
-          description: Bindings that the media belongs to.
+          description: Bindings the media belongs to.
       type: object
       required:
         - id
@@ -3868,7 +4009,7 @@ components:
               type: array
             - type: "null"
           title: Bindings
-          description: Bindings that the playlist belongs to.
+          description: Bindings the playlist belongs to.
       type: object
       required:
         - id
